# libpointing

./: .gitignore  .travis.yml  LICENSE.md  Makefile.am  README.md  all.pro  appveyor.yml  configure.ac  index.html  libpointing.pc.in
apps/: apps.pro
apps/consoleExample/: consoleExample.cpp  consoleExample.pro  consoleExample.vcxproj  consoleExample.vcxproj.filters
apps/controlMouse/: FunctionChanger.cpp  FunctionChanger.h  README.md  controlMouse.cpp  controlMouse.pro
apps/echoMouse/: echoMouse.cpp  echoMouse.h  echoMouse.pro  hid.c  main.cpp  osxEchoMouse.cpp  osxEchoMouse.h  serial.cpp  serial.h  winEchoMouse.cpp  winEchoMouse.h
apps/glutExample/: PlatformSpecific.h  glutExample.cpp  glutExample.pro
apps/qtExample/: BallisticsPlayground.cpp  BallisticsPlayground.h  ballistics.cpp  qtExample.pro
apps/transferFunctionEditor/: README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  transferFunctionEditor.pro
bindings/Java/Jar/: Makefile  README.md  compile.bat  makejar.bat
bindings/Java/ballistics/: Ballistics.java  compileandrun.bat
bindings/Java/consoleExample/: ConsoleExample.java  Makefile  compileandrun.bat
bindings/Java/managerExample/: Makefile  ManagerExample.java  compileandrun.bat
bindings/Node/: Makefile  README.md  builder.js  consoleExample.js  package.json
bindings/Node/client/: pointing.js
bindings/Node/libpointing/: README.md  binding.gyp  common.gypi  package.json
bindings/Node/nw/: index.html  package.json
bindings/Node/server/: README.md  main.js  package.json  server.js
bindings/Python/cython/: Makefile  README.md  README.txt  apiExample.py  cdisplaydevice.pxd  consoleExample.py  cpointingdevice.pxd  cpointingdevicemanager.pxd  csubpixelfunction.pxd  ctransferfunction.pxd  curi.pxd  pylibpointing.pyx  setup.py
building-and-packaging/: Doxyfile  libpointing-version  update_site
building-and-packaging/linux/: Makefile.am  configure.ac  create-deb  prepare  upload
building-and-packaging/mac/: create-formula  prepare  update_brew  update_brew_port
demos/balloons/: balloon.js  index.html
demos/player/: script.js
demos/pong/: index.html
demos/pong/static/: game.js
demos/web-demo/: index.html
distrib/debian/: Release  libpointing-1.0.1_x86_64.deb  libpointing-1.0.3_x86_64.deb
distrib/debian/debian/: libpointing-1.0.2_x86_64.deb
doc/: annotated.html  classes.html  dir_148a1125ec0e55fbe1071861807d0d2b.html  dir_14d76a134cd39a0cd1a5cdd89f68cb66.html  dir_1c742dbf2a0a8ffe2a9acab70df8d376.html  dir_1d1d65a0f20cebf7004b6ca636288f71.html  dir_1d585958c41553e30ff6c000e28f63fd.html  dir_38c521c3d953d9f640b774405aff0894.html  dir_64905e98054293b4dd3e8bf43b62be78.html  dir_842b99242574d6475b4b36ea81f94000.html  dir_8452c5746403a4396317088afa47f6c9.html  dir_b3bb61c25af80a527a2ef8260186f314.html  dir_e1cdb167d0e81f54d0de1da6debc8af9.html  dir_ee2a7de4b4a6359173254fd67728b32f.html  dir_fe75ac642e5d34af0301cf11d21fb7c5.html  files.html  functions.html  functions_eval.html  functions_func.html  functions_type.html  functions_vars.html  hierarchy.html  index.html
doc/d0/d34/: classpointing_1_1osxDisplayDeviceManager-members.html
doc/d0/d54/: classpointing_1_1SystemPointingDevice.html
doc/d0/d58/: classpointing_1_1DummyDisplayDevice-members.html
doc/d0/d93/: xorgDisplayDevice_8h_source.html
doc/d0/d94/: classpointing_1_1xorgDisplayDeviceManager-members.html
doc/d0/da6/: structpointing_1_1winDisplayInfo.html
doc/d0/dc0/: classpointing_1_1_transfer_function-members.html
doc/d0/dd2/: classpointing_1_1osxPointingDevice-members.html
doc/d0/df0/: structpointing_1_1_device_name.html
doc/d1/d16/: classpointing_1_1winSystemPointerAcceleration-members.html  classpointing_1_1xorgDisplayDeviceManager.html
doc/d1/d19/: DisplayDeviceManager_8h_source.html
doc/d1/d53/: DummyPointingDevice_8h_source.html
doc/d1/d59/: structpointing_1_1_callback_info-members.html
doc/d1/d5a/: structpointing_1_1_m_t_touch.html
doc/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enumvalues_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  (+12 more)
old/EchoMouse.zip/: index.html
pointing/: pointing-common.pri  pointing.h  pointing.pri  pointing.pro  pointing.vcxproj  pointing.vcxproj.filters
pointing-echomouse/: plot.py
pointing-echomouse/darwin-10/: config.dict
pointing-echomouse/darwin-14/: config.dict
pointing-echomouse/darwin-15/: config.dict
pointing-echomouse/windows/: config.dict
pointing-xorg/: Readme.txt
pointing-xorg/transferfunctions/: XorgFunction.cpp  XorgFunction.h  XorgFunctionPrivate.cpp
pointing/input/: PointingDevice.cpp  PointingDevice.h  PointingDeviceManager.cpp  PointingDeviceManager.h  SystemPointingDevice.cpp  SystemPointingDevice.h
pointing/transferfunctions/: ConstantFunction.cpp  Interpolation.cpp  Interpolation.h  SubPixelFunction.cpp  SubPixelFunction.h  TransferFunction.cpp  TransferFunction.h
pointing/utils/: FileUtils.cpp  FileUtils.h  HIDItem.cpp  HIDItem.h  HIDReportParser.cpp  HIDReportParser.h  HIDTags.h  PointingCursor.cpp  TimeStamp.cpp  TimeStamp.h  URI.cpp  URI.h
tests/: tests.pro
tests/frequencyestimator/: frequencyestimator.h  frequencyestimator.pro
tests/hidreportparser/: hidreportparser.h  hidreportparser.pro
tests/interpolation/: interpolation.h  interpolation.pro
tests/pointingdevice/: pointingdevice.h  pointingdevice.pro
tests/subpixel/: subpixel.h  subpixel.pro
(+325 files in other folders)
